--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "polling_api_system",
+  "name": "Polling_api",
   "version": "1.0.0",
-  "description": "skill Test 3 of coding ninjas using postman api's",
+  "description": "An api to create polls",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-  },
-  "author": "Garima jain",
-  "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.1",
-    "express": "^4.18.2",
-    "mongoose": "^6.8.0",
-    "nodemon": "^2.0.20"
   }
 }
